--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "src/helpers.php"
         ],
         "psr-4": {
-            "stuartcusackie\\statamic-seo\\": "src"
+            "stuartcusackie\\StatamicSEO\\": "src"
         }
     },
     "authors": [
@@ -27,7 +27,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "stuartcusackie\\statamic-seo\\ServiceProvider"
+                "stuartcusackie\\StatamicSEO\\ServiceProvider"
             ]
         }
     }
