--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
                 "stuartcusackie\\StatamicSEO\\ServiceProvider"
             ],
             "aliases": {
-                "SEO": "stuartcusackie\\StatamicSEO\\SEOFacade"
+                "SEO": "stuartcusackie\\StatamicSEO\\Facades\\SEO"
             }
         }
     }
