--- a/resources/fieldsets/seo_single.yaml
+++ b/resources/fieldsets/seo_single.yaml
@@ -9,7 +9,7 @@ fields:
     display: 'Meta Title'
     type: text
     icon: text
-    instructions: 'Defaults to entry name and configured appendage'
+    instructions: 'Defaults to entry name and globally configured appendage.'
     listable: hidden
     localizable: true
 -
@@ -19,6 +19,7 @@ fields:
     display: 'Meta Description'
     type: textarea
     icon: textarea
+    instructions: 'Defaults to globally configured collection fallback field.'
     listable: hidden
     character_limit: 160
     localizable: true
@@ -31,7 +32,7 @@ fields:
     display: 'Open Graph Title'
     type: text
     icon: text
-    instructions: 'OG data is used by various social media sites'
+    instructions: 'Defaults to Meta Title.'
     listable: hidden
     localizable: true
 -
@@ -42,13 +43,14 @@ fields:
     display: 'Open Graph Description'
     type: textarea
     icon: textarea
+    instructions: 'Defaults to Meta Description.'
     listable: hidden
     localizable: true
 -
   handle: open_graph_image
   field:
     mode: grid
-    container: assets
+    container: images
     restrict: false
     allow_uploads: true
     max_files: 1
@@ -56,5 +58,5 @@ fields:
     type: assets
     icon: assets
     listable: hidden
-    instructions: 'This image will be automatically cropped to 1200 x 627 pixels.'
+    instructions: 'Defaults to globally configured Open Graph Image.'
     localizable: true
